Add header compoennt

--- a/src/css/object/component/_hamburger.scss
+++ b/src/css/object/component/_hamburger.scss
@@ -8,7 +8,5 @@
   align-items: center;
   width: 24px;
   height: 24px;
-  padding: 18px; }
-
-
-/*# sourceMappingURL=/app.77c12427.css.map */
+  padding: 18px;
+}
