--- a/src/css/object/component/_hamburger.scss
+++ b/src/css/object/component/_hamburger.scss
@@ -9,4 +9,12 @@
   width: 24px;
   height: 24px;
   padding: 18px;
+
+  span::before {
+    border-radius: 0 0 0 10px;
+    content: "≡";
+    display: block;
+    text-align: center;
+    font-size: 30px;
+  }
 }
