Add query result component

--- a/src/css/object/component/component.scss
+++ b/src/css/object/component/component.scss
@@ -2,3 +2,6 @@
 @import "./logo.scss";
 @import "./_search-box.scss";
 @import "./_option.scss";
+@import "./knowledge-panel.scss";
+@import "./article.scss";
+@import "./more-load.scss";
